--- a/cpp/SeePlusPlus/SeePlusPlus/SeePlusPlus.vcxproj.filters
+++ b/cpp/SeePlusPlus/SeePlusPlus/SeePlusPlus.vcxproj.filters
@@ -9,10 +9,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Packages">
+      <UniqueIdentifier>{e6516050-0e98-49e2-999c-9ebe0f23a41c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config">
+      <Filter>Packages</Filter>
+    </None>
   </ItemGroup>
 </Project>
